add wall best practice

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/static/index.css">
 </head>
 <body>
     <div id="container"></div>
-    <script src="/static/bundle.js"></script>
+    <script src="/dist/index.js"></script>
 </body>
 </html>
